config/samples/networking_v1alpha1_gatewayclass.yaml
apiVersion: networking.x-k8s.io/v1alpha0
kind: GatewayClass
metadata:
  name: gatewayclass-sample
spec:
  # Add fields here
  foo: bar
